# star-ls

./: .gitignore  Cargo.toml  README.md  WORKSPACE
crates/star_db/: BUILD  Cargo.toml  util.bzl
crates/star_db/src/: lib.rs
crates/star_ide/: Cargo.toml
crates/star_ide/src/: lib.rs  lines.rs
crates/star_ls/: BUILD  Cargo.toml
crates/star_ls/src/: db.rs  global_state.rs  ide.rs  lib.rs  main_loop.rs  subscriptions.rs
crates/star_syntax/: BUILD  Cargo.toml
crates/star_syntax/src/: ast.rs  lexer.rs  lib.rs  lines.rs  render.rs  syntax_kind.rs
crates/star_syntax/src/parser/: arguments.rs  expressions.rs  mod.rs  parameters.rs  params.rs  statements.rs  suite.rs  tests.rs
crates/star_syntax/src/parser/test_data/: continue_stmt.star.ast  def_stmt.star.ast  pass_stmt.star.ast  return_stmt.star.ast
crates/star_syntax/src/parser/test_data/err/: call_expr_recover.star  call_expr_recover.star.ast  def_stmt_expected_opening_paren.star.ast  def_stmt_missing_function_name.star.ast  dot_expr_no_ident.star.ast  tuple_expr_invalid.star  tuple_expr_invalid.star.ast
crates/star_syntax/src/parser/test_data/ok/: assign_stmt.star  assign_stmt.star.ast  break_stmt.star.ast  call_expr.star  call_expr.star.ast  comma_expr.star.ast  continue_stmt.star.ast  def_stmt.star.ast  dot_expr.star  dot_expr.star.ast  list_comp.star  list_comp.star.ast  list_expr.star  list_expr.star.ast  or_expr.star  or_expr.star.ast  parameters.star  parameters.star.ast  parameters_default_always_ok.star  parameters_default_always_ok.star.ast  pass_stmt.star.ast  return_stmt.star  return_stmt.star.ast  test_expr.star  test_expr.star.ast  tuple_expr.star  tuple_expr.star.ast  tuple_exr.star.ast
editors/code/: .eslintrc.js  .swcrc  BUILD  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
editors/code/src/: main.ts
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/codegen/: mod.rs  parser_tests.rs
