[package]
name = "star_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salsa = { git = "https://github.com/manapointer/salsa", package = "salsa-2022", rev = "f1a775c355e8e1f0614966cc7c80d3ce4dd12fd7" }
star_syntax = { path = "../star_syntax" }
