[package]
name = "star_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salsa = { git = "https://github.com/salsa-rs/salsa", package = "salsa-2022", rev = "20c7834ff34fd00a41b59bec61f3d5c85ea3abd4" }
star_syntax = { path = "../star_syntax" }
