[package]
name = "star_ls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "star-ls"
path = "src/bin/main.rs"

[dependencies]
crossbeam-channel = "0.5.5"
lsp-server = "0.6.0"
lsp-types = "=0.93.2"
salsa = { git = "https://github.com/manapointer/salsa", package = "salsa-2022", rev = "2fc0a3c08f666c17f73d4d689535e3030391b607" }
serde_json = "1.0.86"
serde = { version = "1.0.144", features = ["derive"] }
star_db = { path = "../star_db" }
star_syntax = { path = "../star_syntax" }
rayon = "1.5.3"
